Configuraciones del Backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "Backend con MongoDB, ExpressJS y NodeJS",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Emasesosos/MERN-CrudNotas.git"
-  },
-  "keywords": [
-    "Crud",
-    "Notas"
-  ],
-  "author": "Emmanuel Martínez",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Emasesosos/MERN-CrudNotas/issues"
-  },
-  "homepage": "https://github.com/Emasesosos/MERN-CrudNotas#readme",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.7.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.3"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "Backend con MongoDB, ExpressJS y NodeJS",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon src/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Emasesosos/MERN-CrudNotas.git"
+    },
+    "keywords": [
+        "Crud",
+        "Notas"
+    ],
+    "author": "Emmanuel Martínez",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Emasesosos/MERN-CrudNotas/issues"
+    },
+    "homepage": "https://github.com/Emasesosos/MERN-CrudNotas#readme",
+    "dependencies": {
+        "colors": "^1.4.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.1.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.7.1"
+    },
+    "devDependencies": {
+        "nodemon": "^1.19.3"
+    }
 }
