--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,7 @@
         "titleBar.inactiveForeground": "#15202b99",
         "statusBar.background": "#00b3e6",
         "statusBarItem.hoverBackground": "#008bb3",
-        "statusBar.foreground": "#15202b",
-        "panel.border": "#1accff",
-        "sideBar.border": "#1accff",
-        "editorGroup.border": "#1accff"
+        "statusBar.foreground": "#15202b"
     },
     "peacock.color": "#00b3e6"
 }
